manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-deployment
  labels:
    app: devsecops-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-web
  template:
    metadata:
      labels:
        app: devsecops-web
    spec:
      containers:
        - name: devsecops-container
          image: mahdi994/devsecops
          imagePullPolicy: Always
          tag: 0
          ports:
            - containerPort: 8080
