manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: devsecops.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsecops-service
                port:
                  number: 8080
